--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@ menu: no
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">{{ site.previous_page }}</a>
+    <a class="pagination-item older" href="{{ site.baseurl }}/page{{paginator.next_page}}">{{ site.next_page }}</a>
   {% else %}
-    <span class="pagination-item older">{{ site.previous_page }}</span>
+    <span class="pagination-item older">{{ site.next_page }}</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/">{{site.next_page}}</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}/">{{site.previous_page}}</a>
     {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}/page{{paginator.previous_page}}">{{site.next_page}}</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}/page{{paginator.previous_page}}">{{site.previous_page}}</a>
     {% endif %}
   {% else %}
-    <span class="pagination-item newer">{{site.next_page}}</span>
+    <span class="pagination-item newer">{{site.previous_page}}</span>
   {% endif %}
 </div>
